bitfields/tests/compile_error_cases/errors/arrays/array_field_bit_count_too_large.rs
use bitfields::bitfield;

#[bitfield([u8; 1])]
pub struct Bitfield {
    #[bits(4294967296)]
    a: u8,
}

fn main() {}

